--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,10 @@
 [GENERAL]
-debug = 1
+debug = 0
 atom_sleep = 1
 
 [ATOMI]
-N_ATOMI_INIT = 1
+N_ATOMI_INIT = 10
 N_ATOM_MAX = 20
+
+[ATTIVATORE]
+STEP_ATTIVATORE = 1
