--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "string.h": "c",
         "sem.h": "c",
         "mman.h": "c",
-        "semaphore_utils.h": "c"
+        "semaphore_utils.h": "c",
+        "stdarg.h": "c"
     }
 }
