Finito attivatore funzionante con atomo ed iniziato alimentazione

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,9 @@
         "sem.h": "c",
         "mman.h": "c",
         "semaphore_utils.h": "c",
-        "stdarg.h": "c"
+        "stdarg.h": "c",
+        "semaphore.h": "c",
+        "structure_utils.h": "c",
+        "alimentazione.h": "c"
     }
 }
