--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,14 @@
 [GENERAL]
 debug = 0
-atom_sleep = 1
+atom_sleep = 0
 
 [ATOMI]
 N_ATOMI_INIT = 10
-N_ATOM_MAX = 20
+N_ATOM_MAX = 10
+MIN_N_ATOMICO = 1
 
 [ATTIVATORE]
 STEP_ATTIVATORE = 1
+
+[ALIMENTAZIONE]
+STEP_ALIMENTAZIONE = 30
