--- a/config.ini
+++ b/config.ini
@@ -1,14 +1,17 @@
 [GENERAL]
 debug = 0
 atom_sleep = 0
+SIM_DURATION = 100
+ENERGY_EXPLODE_THRESHOLD = 10000000
+ENERGY_DEMAND = 1000
 
 [ATOMI]
-N_ATOMI_INIT = 10
-N_ATOM_MAX = 10
+N_ATOMI_INIT = 40
+N_ATOM_MAX = 70
 MIN_N_ATOMICO = 1
 
 [ATTIVATORE]
 STEP_ATTIVATORE = 1
 
 [ALIMENTAZIONE]
-STEP_ALIMENTAZIONE = 30
+STEP_ALIMENTAZIONE = 1000000009 #1000 ms
