--- a/config.ini
+++ b/config.ini
@@ -1,17 +1,17 @@
 [GENERAL]
 debug = 0
 atom_sleep = 0
-SIM_DURATION = 100
-ENERGY_EXPLODE_THRESHOLD = 10000000
-ENERGY_DEMAND = 1000
+SIM_DURATION = 5
+ENERGY_EXPLODE_THRESHOLD = 100000
+ENERGY_DEMAND = 100
 
 [ATOMI]
-N_ATOMI_INIT = 40
-N_ATOM_MAX = 70
-MIN_N_ATOMICO = 1
+N_ATOMI_INIT = 30
+N_ATOM_MAX = 100
+MIN_N_ATOMICO = 30
 
 [ATTIVATORE]
 STEP_ATTIVATORE = 1
 
 [ALIMENTAZIONE]
-STEP_ALIMENTAZIONE = 1000000009 #1000 ms
+STEP_ALIMENTAZIONE = 100000000 #1000 ms
