--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,11 @@
         "alimentazione.h": "c",
         "msg.h": "c",
         "log_utils.h": "c",
-        "resource.h": "c"
-    }
+        "resource.h": "c",
+        "gtk.h": "c",
+        "ctype.h": "c",
+        "inibitore.h": "c",
+        "stat.h": "c"
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
